CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)

PROJECT(route_annotator)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")
SET(CMAKE_CXX_STANDARD 14)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/node_modules/node-cmake)
FIND_PACKAGE(NodeJS)

ADD_NODEJS_MODULE(${PROJECT_NAME} route_annotator.cc)

MESSAGE(STATUS "Node.js include path: ${NodeJS_INCLUDE_PATHS}")
MESSAGE(STATUS "Node.js libraries: ${NodeJS_LIBRARIES}")
